==> china-djyos/djyos/bsp/cpudrv/stm32/f7/src/spi/cpu_peri_spi.c <==
#include "string.h"
#include "djyos.h"
#include "cpu_peri.h"
#include "int.h"
#include "spibus.h"
#include "math.h"
#include "project_config.h"     //本文件由IDE中配置界面生成，存放在APP的工程目录中。
#define CFG_MODULE_ENABLE_CPU_ONCHIP_SPI    false //如果勾选了本组件，将由DIDE在project_config.h或命令行中定义为true
#define CFG_SPI_BUF_LEN               128       //"SPI缓冲区大小",
#define CFG_SPI1_ENABLE               false     //"是否使用SPI1",
#define CFG_SPI2_ENABLE               false     //"是否使用SPI2",
#define CFG_SPI3_ENABLE               false     //"是否使用SPI3",
#define CFG_SPI4_ENABLE               false     //"是否使用SPI4",
#define CFG_SPI5_ENABLE               false     //"是否使用SPI5",
#define CFG_SPI6_ENABLE               false     //"是否使用SPI6",
#define CN_TIMEOUT  (200*1000)
#define tagSpiReg SPI_TypeDef

static void __SPI_Config(volatile tagSpiReg *Reg,tagSpiConfig *ptr)
{
    __SPI_SetClk(Reg,ptr->Freq);

    //set the PHA
    if(ptr->Mode & SPI_CPHA)
    {
        Reg->CR1 |= SPI_CR1_CPHA;
    }
    else
    {
        Reg->CR1 &= ~SPI_CR1_CPHA;
    }
    //set the cpol
    if(ptr->Mode & SPI_CPOL)
    {
        Reg->CR1 |= SPI_CR1_CPOL;
    }
    else
    {
        Reg->CR1 &= ~SPI_CR1_CPOL;
    }

    if(ptr->CharLen == 16)
    {
        Reg->CR1 |= SPI_CR1_CRCL;
    }
    else
    {
        Reg->CR1 &= ~SPI_CR1_CRCL;
    }
    if(ptr->ShiftDir == SPI_SHIFT_LSB)
    {
        Reg->CR1 |= SPI_CR1_LSBFIRST;
    }
    else
    {
        Reg->CR1 &= ~SPI_CR1_LSBFIRST;
    }
}

static void __SPI_HardConfig(u32 BaseAddr)
{
    tagSpiReg *Reg;

    Reg = (tagSpiReg *)BaseAddr;
    //配置SPI使用GPIO引脚
    __SPI_GpioInit(BaseAddr);

    Reg->CR1 |=SPI_CR1_BR_0|SPI_CR1_BR_1|SPI_CR1_BR_2;//波特率设置
    Reg->CR1 |= SPI_CR1_CPOL;                      // 空闲模式下SCK为1 CPOL=1
    Reg->CR1 |= SPI_CR1_CPHA;                      // 数据采样从第2个时间边沿开始,CPHA=1
    Reg->CR1 &= ~SPI_CR1_RXONLY;//全双工通讯模式
    Reg->CR1 &= ~SPI_CR1_LSBFIRST;//数据帧格式
    Reg->CR1 &= ~ SPI_CR1_SSM;         // 禁止软件nss管理
    Reg->CR1 |= SPI_CR1_SSI;  //SSM
    Reg->CR1 |= SPI_CR1_MSTR;       // SPI主机

    Reg->CR2 |=SPI_CR2_DS_0|SPI_CR2_DS_1|SPI_CR2_DS_2;//数据帧格式7代表8位
    Reg->CR2 |=SPI_CR2_SSOE;//SS 输出使能
    Reg->CR2 |=SPI_CR2_NSSP;//生成 NSS 脉冲
    Reg->CR2 |=SPI_CR2_FRXTH;//8字节fifo
    Reg->I2SCFGR &= (u16)(~SPI_I2SCFGR_I2SMOD);// 选择SPI模式



}

static s32 __SPI_Read( tagSpiReg * Reg )
{
    u32 time = CN_TIMEOUT;
    while ( ( (Reg->SR & SPI_SR_RXNE) == 0 ) && (time > 0))
    {
        time --;
        DJY_DelayUs(1);
    }

    if(time == 0)
        return -1;
    return *((__IO u8 *)&Reg->DR) & 0xFFFF;
}

u32 SPI_ISR(ptu32_t IntLine)
{
    struct SPI_CB *pSCB=NULL;
    struct SPI_IntParamSet *param;
    tagSpiReg *Reg;
    u32 spi_sr,spi_cr2;
    u8 ch,temp;
    static u8 firstrcv = 0;

    if(IntLine == CN_INT_LINE_SPI1)
    {
        pSCB = s_ptSpi1_CB;
        Reg = (tagSpiReg *)tg_SpiReg[CN_SPI1];
        param = &IntParamset1;
    }
    else if(IntLine == CN_INT_LINE_SPI2)
    {
        pSCB = s_ptSpi2_CB;
        Reg = (tagSpiReg *)tg_SpiReg[CN_SPI2];
        param = &IntParamset2;
    }
    else if(IntLine == CN_INT_LINE_SPI3)
    {
        pSCB = s_ptSpi3_CB;
        Reg = (tagSpiReg *)tg_SpiReg[CN_SPI3];
        param = &IntParamset3;
    }
    else if(IntLine == CN_INT_LINE_SPI4)
    {
        pSCB = s_ptSpi4_CB;
        Reg = (tagSpiReg *)tg_SpiReg[CN_SPI4];
        param = &IntParamset4;
    }
    else if(IntLine == CN_INT_LINE_SPI5)
    {
        pSCB = s_ptSpi5_CB;
        Reg = (tagSpiReg *)tg_SpiReg[CN_SPI5];
        param = &IntParamset5;
    }
    else if(IntLine == CN_INT_LINE_SPI6)
    {
        pSCB = s_ptSpi6_CB;
        Reg = (tagSpiReg *)tg_SpiReg[CN_SPI6];
        param = &IntParamset6;
    }
    else
        return 0;

    spi_sr = Reg->SR;
    spi_cr2 = Reg->CR2;
    //发送中断
    if( (spi_cr2 & SPI_CR2_TXEIE) && (spi_sr & SPI_SR_TXE)) //使能了发送中断，且TXRIS
    {
        temp = SPI_PortRead(pSCB,&ch,1);//是否还有数据需要发送

        if(temp >0)
        {
            param->SendDataLen --;
            param->RecvOffset  --;
            *((__IO u8 *)&Reg->DR) = ch;
        }
        else                                            //表明发送结束
        {
            //关发送中断
            __SPI_IntDisable(Reg,SPI_CR2_TXEIE);
            param->RecvOffset -= param->SendDataLen;
            param->SendDataLen = 0;

            ch = *((__IO u8 *)&Reg->DR);

            //发送完成了，判断是否需要接收
            if(param->RecvDataLen > 0)
            {
                //MASTER模式下，发送和接收同时进行
                *((__IO u8 *)&Reg->DR) = 0xAA;
                __SPI_IntEnable(Reg,SPI_CR2_RXNEIE);    //使能接收中断
                firstrcv = 1;
            }
        }
    }
    else if((spi_cr2 & SPI_CR2_RXNEIE) && (spi_sr & SPI_SR_RXNE))    //接收中断
    {
        ch =*((__IO u8 *)&Reg->DR);
        //计算接收了多少数据
        if(firstrcv != 1)
        {
            SPI_PortWrite(pSCB,&ch,1);
            param->RecvDataLen -= 1;
        }
        else
            firstrcv = 0;

        //判断是否还需接收数据
        if(param->RecvDataLen > 0)
        {
            *((__IO u8 *)&Reg->DR) = 0xAA;
        }
        else                    //表明接收已经完成
        {
            param->RecvDataLen = 0;
            __SPI_IntDisable(Reg,SPI_CR2_RXNEIE);
        }
    }

    if(param->RecvDataLen + param->SendDataLen == 0)
    {
        Reg->CR1 &= ~SPI_CR1_SPE;
    }

    return 0;
}

bool_t SPI_Initialize(u8 port)
{
    struct SPI_Param SPI_Config;
    struct SPI_CB **pSpiCB;
    u8 IntLine;

    switch(port)
    {
    case CN_SPI1:
        SPI_Config.BusName          = "SPI1";
        SPI_Config.SPIBuf           = (u8*)&s_Spi1_Buf;
        IntLine = CN_INT_LINE_SPI1;
        pSpiCB = &s_ptSpi1_CB;
        break;
    case CN_SPI2:
        SPI_Config.BusName          = "SPI2";
        SPI_Config.SPIBuf           = (u8*)&s_Spi2_Buf;
        IntLine = CN_INT_LINE_SPI2;
        pSpiCB = &s_ptSpi2_CB;
        break;
    case CN_SPI3:
        SPI_Config.BusName          = "SPI3";
        SPI_Config.SPIBuf           = (u8*)&s_Spi3_Buf;
        IntLine = CN_INT_LINE_SPI3;
        pSpiCB = &s_ptSpi3_CB;
        break;
    case CN_SPI4:
        SPI_Config.BusName          = "SPI4";
        SPI_Config.SPIBuf           = (u8*)&s_Spi4_Buf;
        IntLine = CN_INT_LINE_SPI4;
        pSpiCB = &s_ptSpi4_CB;
        break;
    case CN_SPI5:
        SPI_Config.BusName          = "SPI5";
        SPI_Config.SPIBuf           = (u8*)&s_Spi5_Buf;
        IntLine = CN_INT_LINE_SPI5;
        pSpiCB = &s_ptSpi5_CB;
//        tg_SpiReg[CN_SPI5]->CR1 |= SPI_CR1_CPHA;   //TODO  临时添加
//        tg_SpiReg[CN_SPI5]->CR1 &= ~SPI_CR1_CPOL;
        break;
    case CN_SPI6:
        SPI_Config.BusName          = "SPI6";
        SPI_Config.SPIBuf           = (u8*)&s_Spi6_Buf;
        IntLine = CN_INT_LINE_SPI6;
        pSpiCB = &s_ptSpi6_CB;
        break;
    default:
        return (0);
    }
    SPI_Config.SpecificFlag     = (ptu32_t)tg_SpiReg[port];
    SPI_Config.SPIBufLen        = CFG_SPI_BUF_LEN;
    SPI_Config.MultiCSRegFlag   = false;
    SPI_Config.pTransferPoll    = (TransferPoll)__SPI_TxRxPoll;
    SPI_Config.pTransferTxRx    = (TransferFunc)__SPI_TransferTxRx;
    SPI_Config.pCsActive        = (CsActiveFunc)__SPI_BusCsActive;
    SPI_Config.pCsInActive      = (CsInActiveFunc)__SPI_BusCsInActive;
    SPI_Config.pBusCtrl         = (SPIBusCtrlFunc)__SPI_BusCtrl;

    __SPI_HardConfig((u32)SPI_Config.SpecificFlag); // SPI寄存器设置

    __SPI_IntConfig(IntLine); // 注册中断
    *pSpiCB = SPI_BusAdd(&SPI_Config);
    if(*pSpiCB) // 将SPI端口添加到SPI总线
        return (1);
    else
        return (0);
}
